# gewerbeagent_framework

./: .env.dev.example  .env.prod.example  .gitignore  CLAUDE.md  Caddyfile  INFRA-MANUAL-STEPS.md  RUNBOOK.md  STATUS.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
LEGAL/: AVV-Template.md  Subprozessoren-Liste.md
config/: __init__.py  settings.py
core/: logging_context.py  onboarding.py
docs/: ANLEITUNG-EIGENER-BOT.html  ANLEITUNG-EIGENER-BOT.md  ELEVENLABS-RUECKRUF-TOOL.md  PIPELINE-MANUELLE-TESTS.md  excel_kalkulation_import.md
migrations/: env.py
ops/: backup-pubkey.asc
scripts/: activate_tenant.py  app_login_link.py  assign_number.py  backfill_tenant_features.py  backup_db.sh  book_test_termin_sven.py  cleanup_email_conversations.py  cleanup_pii.py  delete_tenant.py  deploy_dev.sh  deploy_prod.sh  deploy_prod_safe.sh  diag_rechnung_pruefen.py  dsar.py  enable_features.py  external_liveness_check.py  fetch_last_sent.py  gen_drive_url.py  generate_qr.py  init-databases.sh  inspect_demo_team.py  inspect_event_body.py  list_tenants.py  make_kunde_folder.py  onboard.py  restore_db.sh  rotate_encryption_key.py  seed_dev_tenant.py  send_test_formular_reply.py  send_test_mail.py  set_admin_password.py  set_app_password.py  set_login_email.py  setup_storno_chat_test_sven.py  smoke_test_absence.py  smoke_test_onboarding.py  team_test_check_token.py  team_test_krank_check.py  team_test_setup.py  team_test_smart_routing_check.py  (+15 more)
tests/: test_absence_redistribution.py  test_anfrage_form_pipeline.py  test_app_auth.py  (+52 more)
(+215 files in other folders)
